<?xml version="1.0"?>
<package format="2">
	<name>wheelchair_simulator</name>
	<version>1.0.0</version>
	<description>wheelchair_simulator</description>

	<maintainer email="lihanchen2004@163.com">Lihan Chen</maintainer>
	<license>Apache-2.0</license>

	<buildtool_depend>ament_cmake</buildtool_depend>

	<exec_depend>ament_index_python</exec_depend>
	<exec_depend>launch</exec_depend>
	<exec_depend>launch_ros</exec_depend>
	<exec_depend>robot_state_publisher</exec_depend>
	<exec_depend>xacro</exec_depend>
	<exec_depend>nav2_common</exec_depend>

	<depend>wheelchair_description</depend>
	<depend>sdformat_tools</depend>

	<test_depend>ament_cmake_gtest</test_depend>
	<test_depend>ament_lint_auto</test_depend>
	<test_depend>ament_lint_common</test_depend>

	<export>
		<build_type>ament_cmake</build_type>
	</export>
</package>
